<resources>
    <string name="app_name">Laundry Buoy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="GMap_API_Key">AIzaSyBO5AURfgL5FYQJAEgerFFbGkiXEeZqRMc</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="ongoing_collected">Collected</string>
    <string name="ongoing_service">Service</string>
    <string name="ongoing_packed">Packed</string>
    <string name="ongoing_delivery">Delivery</string>
    <string name="add_address">Add Address</string>
    <string name="no_address_available">No address available</string>
    <string name="no_slots_available">Due to the surge, we currently do not have any available slots. Please be patient.</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="enable_gps">To get current location, please enable your gps.</string>
    <string name="provide_permission">To get current location, please provide location permission.</string>
    <string name="get_current_location">Get current location</string>
    <string name="settings">Settings</string>
    <string name="enable_perm">Enable Permissions</string>
    <string name="card_transition_name">Card</string>
    <string name="congratulations">Congratulations</string>
    <string name="utilize_points">You can utilize these points during billing</string>
    <string name="scratch_card">Scratch Card</string>
    <string name="could_earn">Scratch the card above and you could earn rewards!</string>
    <string name="update_email">Update Email</string>
    <string name="OAuth_SSO">68705697038-6c6vfmfhn4c7t9t2vpao8f50hqfb4q90.apps.googleusercontent.com</string>
    <string name="update_contact">Update Contact</string>
    <string name="update_name">Update Name</string>
    <string name="_91">+91</string>
    <string name="no_details_available">No details available</string>
    <string name="no_orders_available">No orders available</string>
    <string name="my_subscription_balance">My Subscription Balance</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="my_laundry_coins">My Laundry Coins</string>
    <string name="rewards">Rewards</string>
    <string name="lb">LB+</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="coins">Coins</string>
    <string name="what_went_wrong">What went wrong?</string>
    <string name="what_you_liked">Woohoo! What amazed you?</string>
    <string name="rate_delivery">Rate Delivery Service</string>
    <string name="rate_pickup">Rate Pickup Service</string>
    <string name="rate_partner">Rate Partner Service</string>
    <string name="temm_us_more">Tell us more...</string>
    <string name="help_us_improve">We\'re all ears! Let us know how we can make your laundry day easier and more convenient.</string>
    <string name="refer_and_earn">Refer and Earn</string>
    <string name="refer_tagline">Together, we\'re\ngoing further!</string>
    <string name="refer_now">Refer Now!</string>
    <string name="i_refer_now">I refer now!</string>
    <string name="refer_sub_head">Refer and introduce the club to your friends.</string>
    <string name="welcome">Welcome</string>
    <string name="flash_msg">Place Your Laundry Order in a Flash</string>
    <string name="proceed">Proceed</string>
    <string name="review">Review</string>
    <string name="home">Home</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="submit">Submit</string>
    <string name="zeros">000000</string>
    <string name="didn_t_receive_code">Didn\'t Receive Code?</string>
    <string name="okay">Okay</string>
    <string name="ac_block_heading">Account Temporarily Blocked</string>
    <string name="ac_block_subheading">We\'re sorry, but you have been blocked from using this app. This could be due to a violation of our terms of service or community guidelines, or because of suspicious or malicious activity on your account. If you believe this block was a mistake, please contact our support team for assistance.</string>
    <string name="support">Support</string>
    <string name="hi">Hi</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="mark_default">MARK DEFAULT</string>
    <string name="delete2">Delete</string>
    <string name="address_book">Address Book</string>
    <string name="search_location_here">Search Location Here</string>
    <string name="locate_me">Locate Me</string>
    <string name="or">Or</string>
    <string name="delete_address_confirmation">Are you sure you want to delete this address?</string>
    <string name="confirm_delete">Confirm Delete!</string>
    <string name="my_subscription">My Subscriptions</string>
    <string name="my_coins">My Coins</string>
    <string name="confirm_purchase">Confirm Purchase Request?</string>
    <string name="confirm_purchase_2">You won\'t be charged anything now. Our delivery person will activate on arrival.</string>
    <string name="confirm_purchase_3">Purchase</string>
    <string name="price_estimator">Price Estimator</string>
    <string name="same_day_pickup">Closed at :</string>
    <string name="my_orders">My Orders</string>
    <string name="bill_not_generated_yet">Bill not generated</string>
    <string name="no_coupons_available">No Coupons Available</string>
    <string name="no_rewards_earned">No Rewards Earned</string>
    <string name="select_service">Select Service</string>
    <string name="select_quantity_type">Select Quantity Type</string>
    <string name="please_select_filters">Please select filters</string>
    <string name="order_date">Order Date</string>
    <string name="address">Address</string>
    <string name="order_number">Order Number</string>
    <string name="order_details">Order Details</string>
    <string name="service_requested">Service</string>
    <string name="bill_hasn_t_been_generated_yet">Bill hasn\'t been generated yet.</string>
    <string name="bill_details">Bill Details</string>
    <string name="total_items">Total Items</string>
    <string name="total_cost">Total Cost</string>
    <string name="subscription_balance_used">Subscription Balance Used</string>

    <!--    <string name="GMap_API_Key">AIzaSyBmfZUlMUKrIS-MFKY16Iu922FMXT-aSGY</string>-->

</resources>