<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.quick.QuickWelcomeFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lightningLottieBig"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:alpha="0.5"
        android:scaleType="centerCrop"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/lightning"
        app:lottie_speed="0.8" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/quickWelcomeHeading_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/lexend_bold"
            android:text="@string/welcome"
            android:textColor="@color/colorHeading"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/quickWelcomeSubHeading_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/quickWelcomeHeading_tv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:fontFamily="@font/lexend_medium"
            android:text="@string/flash_msg"
            android:textColor="@color/colorGreyHeading"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/quickOrder_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/quickWelcomeSubHeading_tv"
            android:layout_marginStart="@dimen/dimen20dp"
            android:layout_marginTop="@dimen/dimen20dp"
            android:layout_marginEnd="@dimen/dimen20dp"
            android:layout_marginBottom="@dimen/dimen20dp"
            android:background="@drawable/rounded_button_30px"
            android:fontFamily="@font/lexend_medium"
            android:text="@string/proceed"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:backgroundTint="@color/colorBlueBtn"
            app:icon="@drawable/ic_baseline_flash_on_24"
            app:iconGravity="textStart"
            app:iconSize="18dp" />

    </RelativeLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lightningLottieSmall"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerCrop"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/lightning"
        app:lottie_speed="0.8" />


</RelativeLayout>