<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet_round"
    android:backgroundTint="@color/white"
    android:padding="@dimen/dimen20dp"
    tools:context=".ui.OtpFragment">

    <ImageView
        android:id="@+id/closeOtpFrag_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_baseline_close_24"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/enterOtpHeading_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/closeOtpFrag_iv"
        android:layout_marginTop="@dimen/dimen20dp"
        android:fontFamily="@font/lexend_medium"
        android:gravity="center_horizontal"
        android:text="@string/enter_otp"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/otpSentTo_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/enterOtpHeading_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:alpha=".7"
        android:fontFamily="@font/lexend_medium"
        android:lineSpacingExtra="14sp"
        android:textColor="@color/synth_color"
        android:textSize="16sp"
        android:textStyle="normal" />


    <RelativeLayout
        android:id="@+id/enterOtp_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/otpSentTo_tv"
        android:layout_marginStart="@dimen/dimen10dp"
        android:layout_marginTop="@dimen/dimen20dp"
        android:layout_marginEnd="@dimen/dimen10dp"
        android:background="@drawable/rounded_button_8px"
        android:backgroundTint="@color/colorHorizontalLine"
        android:padding="10dp"
        android:visibility="visible">

        <EditText
            android:id="@+id/otpNumber_et"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:background="@null"
            android:digits="0123456789"
            android:fontFamily="@font/lexend_medium"
            android:gravity="center"
            android:hint="@string/zeros"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:letterSpacing="0.1"
            android:maxLength="6"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/colorGreyHeading"
            android:textSize="22sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitOtp_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/enterOtp_rl"
        android:layout_marginStart="@dimen/dimen10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/dimen10dp"
        android:alpha="0.7"
        android:background="@drawable/rounded_button_8px"
        android:enabled="false"
        android:fontFamily="@font/lexend_medium"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:backgroundTint="@color/colorBlueBtn"
        app:icon="@drawable/ic_tick_circle"
        app:iconGravity="textStart" />

    <LinearLayout
        android:id="@+id/resendLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/submitOtp_btn"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/notReceiveCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lexend_medium"
            android:text="@string/didn_t_receive_code"
            android:textColor="@color/synth_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/resendText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/lexend_medium"
            android:lineSpacingExtra="11sp"
            android:textColor="@color/coinsMain"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent" />

    </LinearLayout>


</RelativeLayout>